# AIWeeklyData

./: .gitignore  pyproject.toml
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  index.html
docs/data/Weekly/: Journals_Abbr.html  Journals_Early_Access.md  Journals_Keywords.md  Journals_Publisher.md
docs/data/Weekly/Journals/current_year_all_months/aaai/: aaai_link.html
docs/data/Weekly/Journals/current_year_all_months/aaas/: aaas_link.html
docs/data/Weekly/Journals/current_year_all_months/acm/: acm_link.html
docs/data/Weekly/Journals_Keywords/: Adaptive_Systems.html  Aeronautics_and_Astronautics.html  Affective_Computing.html  Ambient_Intelligence.html  Animal_behaviour.html  Applied_Algebra.html  Applied_Geometry.html  Applied_Mathematics.html  Applied_Physics.html  Applied_Probability.html  Applied_Statistics.html  Artificial_Intelligence.html  Artificial_Systems.html  Astronomy.html  Astrophysics.html  Biology.html  Biomedical_Engineering.html  Business_and_Economic.html  Cellular_Signaling.html  Chemical_Physics.html  Chemical_Reviews.html  Chemistry.html  Code_Optimization.html  Cognitive_Computation.html  Combinatorial_Optimization.html  Communication_Networks.html  Computational_Biology.html  Computational_Chemistry.html  Computational_Engineering.html  Computational_Intelligence.html  Computational_Mathematics.html  Computational_Science.html  Computational_Statistics.html  Computational_Technology.html  Computer_Architecture.html  Computer_Science.html  Computer_Systems.html  Computer_Vision.html  Computing_Science.html  Control_Systems.html  (+92 more)
(+838 files in other folders)
